# ScopeCreep-WebApp

./: .env.example  .gitignore  My OpenAI key.docx  README.md  extract_text.py  pyproject.toml  requirements.txt  scope_rag_checker.py  send_sms.py  sms_history.json  streamlit_app_rag.py  ~$ OpenAI key.docx
app/: demo.py  engine.py  extractors.py  main.py  sms.py
docs/: API.md  ARCHITECTURE.md  BUILD_LOG.md  DEPLOYMENT.md  TESTING.md  TRACEABILITY.md  USER_GUIDE.md
static/: app.html  index.html
static/css/: styles.css
static/js/: app.js  scrubber.js  threads.js
test_data/: Scope Document.docx  cleaned_test_emails.csv  scope_creep_results.csv
tests/: scrubber.test.mjs  test_api.py  test_engine.py  test_extractors.py  threads.test.mjs
