[project]
name = "scopecreep-detector"
version = "2.1.2"
description = "RAG-grounded scope-creep detection for project email (research artefact)"
requires-python = ">=3.10"

# Vercel installs from this list (it takes precedence over requirements.txt).
# DO NOT remove the dependencies block: without it the deployed function
# crashes at import with FUNCTION_INVOCATION_FAILED.
dependencies = [
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "openai>=1.40,<3",
    "httpx==0.27.2",
    "numpy>=1.26",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "twilio>=9.0",
]

# Vercel entrypoint: a FastAPI instance named `app` in app/main.py
[project.scripts]
app = "app.main:app"
